[metadata]
name = expenditure-control
description-file = README.rst
author = Iurii Ivanov
author-email = uudecode@gmail.com
summary = Expenditure control service
home-page = http://trak.spb.ru
classifier =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Intended Audience :: Information Technology
    Intended Audience :: Family budget
    Environment :: Console
    Operating System :: POSIX :: Linux

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    expenditure

data_files =
  /etc/init.d = init.d/expenditure-control



[wheel]
universal = false

